jenkins/jenkins-master/jenkins-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-master
  namespace: jenkins
spec:
  type: ClusterIP
  selector:
    app: jenkins-master
  ports:
    - port: 8080
      targetPort: 8080
      name: jenkins-master
    - port: 50000
      targetPort: 50000
      name: jenkins-jnlp
