jenkins/jenkins-master/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-master
  namespace: jenkins
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      name: jenkins-master
    - port: 50000
      name: jenkins-jnlp
  selector:
    app: jenkins-master
